initial commit of mash stage

--- a/nextflow.config
+++ b/nextflow.config
@@ -2,6 +2,12 @@ process {
     withName:TaxAdd {
         container = 'taxaddnf:latest'
     }
+    withName:MashSketch {
+        container = 'mashnf:latest'
+    }
+    withName:MashDist {
+        container = 'mashnf:latest'
+    }
 
 }
 docker {
