added process for fastaselect

--- a/nextflow.config
+++ b/nextflow.config
@@ -8,7 +8,9 @@ process {
     withName:MashDist {
         container = 'mashnf:latest'
     }
-
+    withName:MashSort {
+        container = 'fastaselectnf:latest'
+    }
 }
 docker {
     enabled = true
