updated paths and taxid datatype

--- a/src/taxadd/Dockerfile
+++ b/src/taxadd/Dockerfile
@@ -1,6 +1,8 @@
 FROM python:3.6-slim
 
-COPY taxadd usr/local/bin
+COPY taxadd /usr/local/bin
+
+COPY names.dmp /home
 
 RUN pip install --upgrade pip && \
 pip --no-cache-dir install requests pandas
