added kraken2 container to config

--- a/nextflow.config
+++ b/nextflow.config
@@ -11,6 +11,9 @@ process {
     withName:MashSort {
         container = 'fastaselectnf:latest'
     }
+    withName:KrakenAdd {
+        container = 'kraken2nf:latest'
+    }
 }
 docker {
     enabled = true
