--- a/nextflow.config
+++ b/nextflow.config
@@ -3,16 +3,16 @@ process {
         container = 'pyautodatabase:latest'
     }
     withName:MashSketch {
-        container = 'mashnf:latest'
+        container = 'mash:latest'
     }
     withName:MashDist {
-        container = 'mashnf:latest'
+        container = 'mash:latest'
     }
     withName:MashSort {
         container = 'pyautodatabase:latest'
     }
     withName:KrakenAdd {
-        container = 'kraken2nf:latest'
+        container = 'kraken2:latest'
     }
 }
 docker {
