updated process names

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,17 +1,17 @@
 process {
-    withName:TaxAdd {
+    withName:autodatabase_addtaxon {
         container = 'pyautodatabase:latest'
     }
-    withName:MashSketch {
+    withName:mash_sketch {
         container = 'mash:latest'
     }
-    withName:MashDist {
+    withName:autodatabase_mashdist {
         container = 'mash:latest'
     }
-    withName:MashSort {
+    withName:autodatabase_qc {
         container = 'pyautodatabase:latest'
     }
-    withName:KrakenAdd {
+    withName:kraken2_databasebuild {
         container = 'kraken2:latest'
     }
 }
