added parallelisation by taxon for mash

--- a/nextflow.config
+++ b/nextflow.config
@@ -2,10 +2,7 @@ process {
     withName:autodatabase_addtaxon {
         container = 'pyautodatabase:latest'
     }
-    withName:mash_sketch {
-        container = 'mash:latest'
-    }
-    withName:autodatabase_mashdist {
+    withName:autodatabase_mash {
         container = 'mash:latest'
     }
     withName:autodatabase_qc {
