moved parameters to config

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,14 +1,20 @@
+// define input parameters, e.g. path to new assemblies to be added, path to the current database
+params.addFasta = "/home/ubuntu/data/auto_database/new"
+//params.currentDatabase = "/home/ubuntu/data/auto_database/current"
+params.currentDatabase = null
+params.newDatabase = "/home/ubuntu/data/auto_database/databasetest"
+
 process {
-    withName:autodatabase_addtaxon {
+    withName:autoDatabase_addTaxon {
         container = 'pyautodatabase:latest'
     }
-    withName:autodatabase_mash {
+    withName:autoDatabase_mash {
         container = 'mash:latest'
     }
-    withName:autodatabase_qc {
+    withName:autoDatabase_qc {
         container = 'pyautodatabase:latest'
     }
-    withName:kraken2_databasebuild {
+    withName:autoDatabase_kraken2Build {
         container = 'kraken2:latest'
     }
 }
