--- a/docker/Dockerfile.autoDatabase_pythonenv
+++ b/docker/Dockerfile.autoDatabase_pythonenv
@@ -1,25 +1,24 @@
-FROM python:3.6-slim
+FROM debian:buster
 
 COPY taxadd fastaselect usr/local/bin/
 
-ENV PACKAGES="\
-wget \
-unzip \
-"
-
-ENV PY_PACKAGES="\
-requests \
-numpy \
-pandas \
-"
-
-RUN pip install --upgrade pip \
-&& pip --no-cache-dir install $PY_PACKAGES \
-&& apt-get update \
-&& apt-get install -y $PACKAGES \
+RUN apt-get update \ 
+&& apt-get install -y python3 python3-dev python3-pip \
+&& apt-get install -y wget unzip \ 
+&& pip install --upgrade pip \
+&& pip --no-cache-dir install requests numpy pandas \
 && wget ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/taxdump_archive/taxdmp_2018-10-01.zip \
 && unzip taxdmp_2018-10-01.zip \
 && mv names.dmp /home \
 && rm taxdmp_2018-10-01.zip *.dmp *.prt
 
-CMD ["/bin/bash"]
+### Software Versions ###
+
+RUN env | grep "pengu_software_version" | sed 's/pengu_software_version_//g' > /etc/pengu_software_version.txt
+
+RUN if [ -d "/.singularity.d/env" ] ; \
+then grep "pengu_software_version" /.singularity.d/env/* | awk '{print $2}' | sed 's/pengu_software_version_//g' > /etc/pengu_software_version.txt ; \
+fi
+
+RUN pip3 freeze >> /etc/pengu_software_version.txt
+
