--- a/docker/Dockerfile.autoDatabase_pythonenv
+++ b/docker/Dockerfile.autoDatabase_pythonenv
@@ -5,8 +5,8 @@ COPY taxadd fastaselect usr/local/bin/
 RUN apt-get update \ 
 && apt-get install -y python3 python3-dev python3-pip \
 && apt-get install -y wget unzip \ 
-&& pip install --upgrade pip \
-&& pip --no-cache-dir install requests numpy pandas \
+&& pip3 install --upgrade pip \
+&& pip3 --no-cache-dir install requests scipy numpy pandas \
 && wget ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/taxdump_archive/taxdmp_2018-10-01.zip \
 && unzip taxdmp_2018-10-01.zip \
 && mv names.dmp /home \
