add path for singularity containers

--- a/nextflow.config
+++ b/nextflow.config
@@ -4,22 +4,7 @@ params.addFasta = "/home/ubuntu/data/auto_database/new"
 params.currentDatabase = null
 params.newDatabase = "/home/ubuntu/data/auto_database/databasetest"
 
-process {
-    withName:autoDatabase_addTaxon {
-        container = 'pyautodatabase:latest'
-    }
-    withName:autoDatabase_mash {
-        container = 'mash:latest'
-    }
-    withName:autoDatabase_qc {
-        container = 'pyautodatabase:latest'
-    }
-    withName:autoDatabase_kraken2Build {
-        container = 'kraken2:latest'
-    }
-}
-docker {
-    enabled = true
-    runOptions = '-u $(id -u):$(id -g)'
-}
+singularity.enabled = 'true'
+singularity.autoMounts = 'true'
 
+params.simgdir = '/home/ubuntu/data/auto_database/autodatabase/singularity'
