--- a/nextflow.config
+++ b/nextflow.config
@@ -1,10 +1,17 @@
-// define input parameters, e.g. path to new assemblies to be added, path to the current database
-params.addFasta = "/home/ubuntu/data/auto_database/new"
-//params.currentDatabase = "/home/ubuntu/data/auto_database/current"
-params.currentDatabase = null
-params.newDatabase = "/home/ubuntu/data/auto_database/databasetest"
+// singularity config for autodatabase
 
+// path to new fasta to be added to database
+params.addFasta = ""
+
+// path to fasta from previous database build
+params.currentDatabase = ""
+
+// path where the new database and other results will be saved
+params.newDatabase = ""
+
+// enable singularity
 singularity.enabled = 'true'
 singularity.autoMounts = 'true'
 
-params.simgdir = '/home/ubuntu/data/auto_database/autodatabase/singularity'
+// path to the singularity containers
+params.simgdir = ""
