add docker and singularity profiles

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,17 +1,75 @@
-// singularity config for autodatabase
+// config for autoDatabase
 
-// path to new fasta to be added to database
-params.addFasta = ""
+// define global parameters
+params {
 
-// path to fasta from previous database build
-params.currentDatabase = ""
+  // path to new fasta to be added to database
+  addFasta = ""
 
-// path where the new database and other results will be saved
-params.newDatabase = ""
+  // path to fasta from previous database build
+  currentDatabase = null
 
-// enable singularity
-singularity.enabled = 'true'
-singularity.autoMounts = 'true'
+  // path where the new database and other results will be saved
+  newDatabase = "${baseDir}/results"
 
-// path to the singularity containers
-params.simgdir = ""
+}
+
+// define docker and singularity profiles
+profiles {
+  singularity {
+
+    singularity.enabled = 'true'
+    singularity.autoMounts = 'true'
+
+    // path to the singularity containers
+    params.sifDir = "${baseDir}/singularity"
+
+    // define containers for each process
+    process {
+   
+      withName:autoDatabase_addTaxon {
+        container = "${params.sifDir}/autoDatabase_pythonenv.sif"
+      }
+  
+      withName:autoDatabase_mash {
+        container = "${params.sifDir}/autoDatabase_mash.sif"
+      }
+
+      withName:autoDatabase_qc {
+        container = "${params.sifDir}/autoDatabase_pythonenv.sif"
+      }
+
+      withName:autoDatabase_kraken2Build {
+        container = "${params.sifDir}/autoDatabase_kraken2.sif"
+      }
+    }
+  }
+
+  docker {
+    
+    docker.enabled = true
+    fixOwnership = true
+    runOptions = "-u \$(id -u):\$(id -g)"
+
+    // define containers for each process
+    process {
+    
+      withName:autoDatabase_addTaxon {
+        container = "autodatabasepythonenv:latest"
+      }
+    
+      withName:autoDatabase_mash {
+        container = "autodatabasemash:latest"
+      }
+
+      withName:autoDatabase_qc {
+        container = "autodatabasepythonenv:latest"
+      }
+
+      withName:autoDatabase_kraken2Build {
+        container = "autodatabasekraken2:latest"
+      }
+    } 
+  }
+}
+
