update parameter name

--- a/nextflow.config
+++ b/nextflow.config
@@ -7,7 +7,7 @@ params {
   addFasta = ""
 
   // path to fasta from previous database build
-  currentDatabase = null
+  previousDatabase = null
 
   // path where the new database and other results will be saved
   newDatabase = "${baseDir}/results"
