add getTaxonomy process

--- a/nextflow.config
+++ b/nextflow.config
@@ -12,6 +12,9 @@ params {
   // path where the new database and other results will be saved
   newDatabase = "${baseDir}/results"
 
+  // date of NCBI taxonomy to download, format YYYY-MM-DD
+  ncbiDate = '2020-05-01'
+
 }
 
 // define docker and singularity profiles
@@ -42,6 +45,9 @@ profiles {
       withName:autoDatabase_kraken2Build {
         container = "${params.sifDir}/autoDatabase_kraken2.sif"
       }
+      withName:autoDatabase_krona {
+        container = "${params.sifDir}/autoDatabase_krona.sif"
+      }
     }
   }
 
@@ -68,6 +74,9 @@ profiles {
 
       withName:autoDatabase_kraken2Build {
         container = "autodatabasekraken2:latest"
+      }
+      withName:autoDatabase_krona {
+        container = "autodatabasekrona:latest"
       }
     } 
   }
