add param to select mash dist range

--- a/nextflow.config
+++ b/nextflow.config
@@ -10,11 +10,13 @@ params {
   previousDatabase = null
 
   // path where the new database and other results will be saved
-  newDatabase = "${baseDir}/results"
+  newDatabase = "${baseDir}/result"
 
   // date of NCBI taxonomy to download, format YYYY-MM-DD
   ncbiDate = '2020-05-01'
 
+  // range to take around the mode of the average mash distance, default is 10%
+  modeRange = '0.1'
 }
 
 // define docker and singularity profiles
